BudgetView: Fixing totals alignment in summary

--- a/app/budget/directives/courseCosts/courseCosts.css
+++ b/app/budget/directives/courseCosts/courseCosts.css
@@ -101,5 +101,5 @@
 
 .course-costs__table-header--total-costs {
 	text-align: right;
-	padding-right: 25px;
+	padding-right: 27px;
 }
