--- a/app/budget/directives/instructorCosts/instructorCosts.css
+++ b/app/budget/directives/instructorCosts/instructorCosts.css
@@ -112,7 +112,7 @@
 
 .instructor-costs__header--total-cost {
 	text-align: right;
-	padding-right: 25px;
+	padding-right: 26px;
 }
 
 .instructor-costs__header--reason,
